--- a/15_05_2023_my_array_methods/index.html
+++ b/15_05_2023_my_array_methods/index.html
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/index.css" />
+    <title>My Google</title>
   </head>
   <body>
-    <p>Заголовок</p>
+    <script src="./scripts/index.js"></script>
   </body>
-  <script></script>
 </html>
